--- a/practice.html
+++ b/practice.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="practice.css">
 </head>
 <body>
-	<h1>This is CSSFLEX BOX</h1>
+	<h1>CSS FLEX BOX</h1>
 	<div class = "container">
 		<img src = "https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg
 		">
